src/snapshots/cronexpr__parser__tests__parse_crontab_failed-26.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 1 1 5 +26:00\").unwrap_err()"
---
failed to parse crontab expression:
0 0 1 1 5 +26:00
          ^ failed to find timezone +26:00; for a list of time zones, see the list of tz database time zones on Wikipedia: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
