src/snapshots/cronexpr__parser__tests__parse_crontab_failed-27.snap
---
source: src/parser.rs
expression: "parse_crontab(\"0 0 1 1 5 +Ch:Ch\").unwrap_err()"
---
failed to parse crontab expression:
0 0 1 1 5 +Ch:Ch
          ^ failed to find timezone +Ch:Ch; for a list of time zones, see the list of tz database time zones on Wikipedia: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones#List
